# zhiyin-guqin

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
.claude/: launch.json
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py  models.py  settings.py
backend/app/data/: therapy_library.py
backend/app/repos/: agent_state_repo.py  profile_repo.py
backend/app/services/: diagnosis.py  llm_agent.py  playback.py  transcription.py
backend/app/templates/: index.html
backend/tests/: test_agent_100.py
docs/: 开发指南_README_en.md  知音Readme.md
src/app/: App.tsx  intake-context.tsx  navigation.ts  store.ts
src/app/components/: GuqinSVG.tsx  Seal.tsx  SharedElements.tsx
src/app/components/screens/: ScreenCare.tsx  ScreenDiagnosisResult.tsx  ScreenExtras.tsx  ScreenIntakeCards.tsx  ScreenMy.tsx  ScreenTransition.tsx
src/imports/pasted_text/: zhiyin-app-design.md
src/styles/: theme.css
